# ralph

./: .dockerignore  .gitignore  .last-branch  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  COPILOT.md  Cargo.toml  Dockerfile  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_GUIDANCE_IMPLEMENTATION.md  LICENSE  OPENCODE.md  QUICKSTART.md  README-MCP.md  README.md  README_WEB_UI.md  STEP_BY_STEP_WORKFLOW.md  architect.ps1  convert-to-prd-json.sh  demo.py  deny.toml  docker-compose.yml  generate-prd.ps1  install-clawdbot.sh  install-from-release.sh  install.sh  lerty-setup.sh  lerty.sh  package.json  prd.json  prd.json.example  prd.json.sample  progress.txt  prompt-opencode.md  prompt.convert-to-prd-json.md  prompt.md  ralph-integrations.toml.example  (+14 more)
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.cursor/rules/: ralph-prd.mdc
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
Formula/: ralph.rb
LocalPhotosApp/LocalPhotosApp/: ContentView.swift  LocalPhotosAppApp.swift
LocalPhotosApp/LocalPhotosApp.xcodeproj/: project.pbxproj
agents/: story-executor.md
architect/: README.md  idea.md  prompt.md
architect/sections/: section-001-project-setup.md  section-002-type-definitions.md  section-003-state-management.md  section-004-scene-setup.md  section-005-terrain-rendering.md  section-006-building-blocks.md  section-007-camera-controls.md  section-008-app-layout.md  section-009-parcel-config-panel.md  section-010-unit-config-panel.md  section-011-view-controls-panel.md  section-012-flat-terrain-layout.md  section-013-terraced-layout.md  section-014-privacy-optimization.md  section-015-roof-garden-logic.md  section-016-amenity-system.md  section-017-ai-integration.md  section-019-export-system.md  section-021-test-scenario-villa.md  section-022-test-scenario-duplex.md  section-023-test-scenario-studios.md
architect/tasks/: task-001-project-setup.json  task-002-type-definitions.json  task-003-state-management.json  task-004-scene-setup.json  task-005-terrain-rendering.json  task-006-building-blocks.json  task-007-camera-controls.json  task-008-app-layout.json  task-009-parcel-config-panel.json  task-010-unit-config-panel.json  task-011-view-controls-panel.json  task-012-flat-terrain-layout.json  task-013-terraced-layout.json  task-014-privacy-optimization.json  task-015-roof-garden-logic.json  task-016-amenity-system.json  task-017-ai-integration.json  task-019-export-system.json  task-021-test-villa.json  task-022-test-duplex.json  task-023-test-studios.json
architect/templates/: section-template.md  task-template.json
architect/validation/: prd-summary.md  status.md
backend/: .env.example  README.md  requirements.txt  run.py
backend/app/: __init__.py  main.py
claude-code/: CLAUDE.md  README.md  prd-generator.md  prompt.md  ralph.sh
cli/: Cargo.toml
cli/src/: main.rs
commands/: chief-wiggum.md  chief-wiggum.sh
copy_to_project/: ralph_install.sh  scripts_ralph_README.md  scripts_ralph_gitattributes
docs/: COST_TRACKING.md  MONITORING.md  SECURITY.md
docs/guides/: claude-desktop-setup.md  docker-mcp-setup.md
docs/plans/: 2026-01-22-cli-packaging.md
examples/: README.md  mcp-toolkit-config.json
examples/structured-workflow/: README.md  TASK-BREAKDOWN-GUIDE.md  prd.json.example
flowchart/: index.html  package-lock.json  package.json  vite.config.ts
flowchart/src/: App.css  App.tsx  types.ts
hooks/: hooks.json  stop-hook.sh
lib/: task-converter.js  task-utils.sh
plan/cursor-support/: master-plan.md  steps.md
plan/installation/: plan.md  steps.md
plan/progress-split/: progress-split.md
prd-ui/: README.md  package.json  pnpm-lock.yaml
prd-ui/backend/: jest.config.js  kill-port.sh  nodemon.json  package.json  server.js
prd-ui/frontend/: index.html  package.json  vitest.config.ts
prds/: 01-database-setup.json.example  02-user-auth.json.example  03-task-management.json.example
projects/analytics-dashboard/: .project.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
projects/beautiful-todo-app/: .project.json  README.md  index.html  package.json  vite.config.ts
projects/chat-app/: .project.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
projects/dashboard-for-tracking/: .project.json  README.md  index.html  package.json  vite.config.ts
projects/ecommerce-store/: .project.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
projects/my-dashboard-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
projects/portfolio-site/: .project.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
projects/task-manager/: .project.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
projects/test-app/: .project.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
quality/: ralph-quality.toml
ralph/: archiver.py
scripts/: prd-to-tasks.js  release.sh  validate_prd.sh
scripts/ralph/: convert-to-prd-json.sh  ralph.sh  test_ralph.sh
skills/: README.md  setup-cursor-cli.sh
skills/audit/: SKILL.md
skills/business-prd/: SKILL.md
skills/chief-wiggum/: SKILL.md
skills/mir-to-prd/: SKILL.md
skills/planning/: SKILL.md
skills/prd/: SKILL.md
skills/ralph/: CONTEXT.md  HANDOFF.md  SKILL.md
skills/ralph-init/: SKILL.md
skills/ui-skills/: SKILL.md
src/: interactive_guidance.rs  lib.rs  logging.rs  main.rs  runner.rs
src/audit/: api.rs  architecture.rs  dependencies.rs  documentation.rs  interactive.rs  inventory.rs  languages.rs  mod.rs  patterns.rs  prd_converter.rs  prd_generator.rs  testing.rs
src/checkpoint/: manager.rs  (+1 more)
tasks/: prd-codebase-audit.md  prd-error-recovery-system.md  prd-mcp-prd-skills.md  prd-parallel-execution.md  prd-ralph-expansion.md
templates/: wordpress-ssh.md
tests/: audit_integration_tests.rs  cli.test.js  cli_tests.rs  conftest.py  error_recovery_tests.rs  fixtures_tests.rs  integration_tests.rs  ralph.bats  test_ralph.sh  test_ralphython.py
(+223 files in other folders)
