[workspace]
members = [".", "cli"]
resolver = "2"

[package]
name = "ralphmacchio"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Enterprise-ready autonomous AI agent framework with MCP server, quality gates, and rich terminal UI"
license = "MIT"
repository = "https://github.com/kcirtapfromspace/ralph"
homepage = "https://github.com/kcirtapfromspace/ralph"
documentation = "https://docs.rs/ralphmacchio"
readme = "README.md"
authors = ["kcirtapfromspace"]
keywords = ["ai", "agent", "mcp", "automation", "cli"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]
exclude = [
    "flowchart/",
    "docs/",
    "*.png",
    "*.webp",
    ".github/",
    "tasks/",
    "cli/",
]

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
graphql_client = { version = "0.14", features = ["reqwest"] }
hex = "0.4"
hmac = "0.12"
octocrab = "0.42"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI dependencies
console = "0.15"
crossterm = "0.27"
ctrlc = "3.4"
indicatif = "0.17"
owo-colors = "4"

# Image-to-ANSI conversion
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rust-embed = { version = "8", features = ["include-exclude"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "ralph"
path = "src/main.rs"
