[package]
name = "ralph"
version = "1.0.0"
edition = "2021"
description = "Autonomous AI agent loop using Claude Code"
authors = ["kcirtapfromspace"]
license = "MIT"
repository = "https://github.com/kcirtapfromspace/ralph"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
colored = "2"
dirs = "5"
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
